// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-1odct9b"
  />
   
  <div
    class="flex items-center svelte-1odct9b"
  >
    <span
      class="current svelte-1odct9b"
    />
     
    <div
      class="player svelte-1odct9b"
    >
      <span
        class="controls svelte-1odct9b"
      >
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly large"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-1odct9b"
      >
        <span
          class="svelte-1odct9b"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-5o3d90"
        >
          <input
            class="w-full svelte-5o3d90"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-5o3d90"
          >
            <span
              class="progress svelte-5o3d90"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-1odct9b"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-1odct9b"
    >
      <div
        class="volume svelte-1odct9b"
      >
        <span
          class="volume-slider svelte-1odct9b"
        >
          <div
            class="wrapper undefined svelte-5o3d90"
          >
            <input
              class=" svelte-5o3d90"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-5o3d90"
            >
              <span
                class="progress svelte-5o3d90"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            volume_up
          </i>
           
        </button>
      </div>
       
      <button
        class="svelte-ztyk6h iconOnly large"
      >
        <i
          class="material-icons svelte-ztyk6h"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-1odct9b"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center svelte-1odct9b"
  >
    <span
      class="current svelte-1odct9b"
    >
      <div
        class="undefined root svelte-p26357"
      >
        <a
          class="flex-none"
          href="#/album/0"
        >
          <img
            alt="./# Films/cover.jpg"
            class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./%23 Films/cover.jpg#nonce=0.1"
          />
           
          
        </a>
         
        <div
          class="track svelte-p26357"
        >
          <span
            class="title svelte-p26357"
          >
            file 1
          </span>
           
          <a
            class="artist underlined svelte-p26357"
            href="#/artist/4090049524"
          >
            Someone
          </a>
        </div>
         
      </div>
    </span>
     
    <div
      class="player svelte-1odct9b"
    >
      <span
        class="controls svelte-1odct9b"
      >
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly large"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-1odct9b"
      >
        <span
          class="svelte-1odct9b"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-5o3d90"
        >
          <input
            class="w-full svelte-5o3d90"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-5o3d90"
          >
            <span
              class="progress svelte-5o3d90"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-1odct9b"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-1odct9b"
    >
      <div
        class="volume svelte-1odct9b"
      >
        <span
          class="volume-slider svelte-1odct9b"
        >
          <div
            class="wrapper undefined svelte-5o3d90"
          >
            <input
              class=" svelte-5o3d90"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-5o3d90"
            >
              <span
                class="progress svelte-5o3d90"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-ztyk6h iconOnly noBorder"
        >
          <i
            class="material-icons svelte-ztyk6h"
          >
            volume_up
          </i>
           
        </button>
      </div>
       
      <button
        class="svelte-ztyk6h iconOnly large"
      >
        <i
          class="material-icons svelte-ztyk6h"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;
